--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
     </nav>
     <!--header class="msger-header">
       <div class="msger-header-title">
-        <h5><i class="fas fa-graduation-cap"></i> <b> &emsp; K J SOMAIYA EDU-BOT &emsp; </b><i class="fas fa-graduation-cap"></i></h5>
+        <h5><i class="fas fa-graduation-cap"></i> <b> &emsp; KJSIT EDU-BOT &emsp; </b><i class="fas fa-graduation-cap"></i></h5>
       </div>
     </header-->
     {% with messages = get_flashed_messages() %}
@@ -149,7 +149,7 @@
           </div>      
               
           <div class="msg-text" style="color: white;">
-            <b >Hi there, Welcome to K. J. Somaiya 's EDU-BOT! 👋 If you need any assistance, I'm always here.
+            <b >Hi there, Welcome to KJSIT 's EDU-BOT! 👋 If you need any assistance, I'm always here.
           </div>
         </div>
       </div> 
@@ -164,7 +164,7 @@
           <div class="msg-text" style="color: white;">
            Which of the following user groups do you belong to?
             
-              <br><br>1.&emsp;First Year Admission Query.</br>2.&emsp;Direct Second Year Admission Query. </br>3.&emsp;MTech Query.</br>4.&emsp;P.H.D Query</br>
+              <br><br>1.&emsp;First Year Admission Query.</br>2.&emsp;Direct Second Year Admission Query. </br>3.&emsp;MTech Query.</br>4.&emsp;Ph.D Query</br>
     
         </div>               
           
@@ -198,7 +198,7 @@
     // Icons made by Freepik from www.flaticon.com
     const BOT_IMG = "https://library.somaiya.edu/sites/default/files/styles/panopoly_image_original/public/svv_logo.png";
     const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-    const BOT_NAME = "K J SOMAIYA EDU-BOT";
+    const BOT_NAME = "KJSIT EDU-BOT";
     const PERSON_NAME = "You";
 
     msgerForm.addEventListener("submit", event => {
