--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
               <div class="modal-dialog modal-dialog-scrollable" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalScrollableTitle">K J SOMAIYA EDU-BOT</h5>
+                    <h5 class="modal-title" id="exampleModalScrollableTitle">KJSIT EDU-BOT</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
