--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>KJ SOMAIYA EDU-BOT</title>
+  <title>KJSIT EDU-BOT</title>
   <link rel="icon" href="{{ url_for('static', filename='images/icon.png') }}" type="image" sizes="16x16">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
    
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!--a class="navbar-brand" href="#">KJ SOMAIYA EDU-BOT</a-->
+        <!--a class="navbar-brand" href="#">KJSIT EDU-BOT</a-->
         <a class="navbar-brand" href="#" style="color: white;">
           &emsp;<i class="fas fa-graduation-cap"></i> <b> &nbsp; KJ SOMAIYA EDU-BOT &emsp; </b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
