--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <!--a class="navbar-brand" href="#">KJSIT EDU-BOT</a-->
         <a class="navbar-brand" href="#" style="color: white;">
-          &emsp;<i class="fas fa-graduation-cap"></i> <b> &nbsp; KJ SOMAIYA EDU-BOT &emsp; </b></a>
+          &emsp;<i class="fas fa-graduation-cap"></i> <b> &nbsp; KJSIT EDU-BOT &emsp; </b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
