--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
         </div>
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name"><b>K J SOMAIYA EDU-BOT</b> </div>
+            <div class="msg-info-name"><b>KJSIT EDU-BOT</b> </div>
           </div>      
               
           <div class="msg-text" style="color: white;">
