--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
       <div class="container">
-          <a class="navbar-brand" href="#" style="font-size: large;">KJSIT EDU-BOT</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+          <a class="navbar-brand" href="#" style="font-size: large;">KJSIT FAQ EDU-BOT</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item"><a class="nav-link" href="/">Log In</a></li>
