--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>KJSIT EDU-BOT</title>
+  <title>KJSIT FAQ EDU-BOT</title>
   <link rel="icon" href="{{ url_for('static', filename='images/icon.png') }}" type="image" sizes="16x16">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,9 +28,9 @@
    
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!--a class="navbar-brand" href="#">KJSIT EDU-BOT</a-->
+        <!--a class="navbar-brand" href="#">KJSIT FAQ EDU-BOT</a-->
         <a class="navbar-brand" href="#" style="color: white;">
-          &emsp;<i class="fas fa-graduation-cap"></i> <b> &nbsp; KJSIT EDU-BOT &emsp; </b></a>
+          &emsp;<i class="fas fa-graduation-cap"></i> <b> &nbsp; KJSIT FAQ EDU-BOT &emsp; </b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -121,7 +121,7 @@
     </nav>
     <!--header class="msger-header">
       <div class="msger-header-title">
-        <h5><i class="fas fa-graduation-cap"></i> <b> &emsp; KJSIT EDU-BOT &emsp; </b><i class="fas fa-graduation-cap"></i></h5>
+        <h5><i class="fas fa-graduation-cap"></i> <b> &emsp; KJSIT FAQ EDU-BOT &emsp; </b><i class="fas fa-graduation-cap"></i></h5>
       </div>
     </header-->
     {% with messages = get_flashed_messages() %}
@@ -145,7 +145,7 @@
         </div>
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name"><b>KJSIT EDU-BOT</b> </div>
+            <div class="msg-info-name"><b>KJSIT FAQ EDU-BOT</b> </div>
           </div>      
               
           <div class="msg-text" style="color: white;">
